Change Turtle internals
instead of one history list with different types of moves, it is a list of layers each with a list of lines each with a lists of points.